syntax = "proto3";
package test3;

option java_package = "com.proto.dino";
option java_multiple_files = true;
option optimize_for = CODE_SIZE;

message Dinosaur {
  // Common name of this dinosaur, like "Stegosaurus".
  string name = 1;

  // URLs with images of this dinosaur.
  repeated string picture_urls = 2;

  Period period = 5;
}

enum Period {
  // 145.5 million years ago — 66.0 million years ago.
  CRETACEOUS = 0;

  // 201.3 million years ago — 145.0 million years ago.
  JURASSIC = 1;

  // 252.17 million years ago — 201.3 million years ago.
  TRIASSIC = 2;
}

message FindDinoResponse {
  // Dinosaurs with matching search string
  repeated  Dinosaur dinosaurs = 1;
}

message FindDinoRequest {
  // Search string
  string searchString = 1;
}

service DinoService {
  // endpoint to find dino's with request specified
  rpc findDino(FindDinoRequest) returns (FindDinoResponse) {};
}